--- a/Ayra.CLI/Ayra.CLI.csproj
+++ b/Ayra.CLI/Ayra.CLI.csproj
@@ -13,5 +13,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ayra.Core\Ayra.Core.csproj" />
+    <ProjectReference Include="..\Ayra.TitleKeyDatabase\Ayra.TitleKeyDatabase.csproj" />
   </ItemGroup>
 </Project>
