--- a/Ayra.GUI/Ayra.GUI.csproj
+++ b/Ayra.GUI/Ayra.GUI.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -87,6 +90,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -99,6 +103,10 @@
     <ProjectReference Include="..\Ayra.Core\Ayra.Core.csproj">
       <Project>{fe0cfee8-a836-4a23-a742-1c0e706495e1}</Project>
       <Name>Ayra.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ayra.TitleKeyDatabase\Ayra.TitleKeyDatabase.csproj">
+      <Project>{f55c88c8-5a4e-4b7f-a7d4-82eacc7edf81}</Project>
+      <Name>Ayra.TitleKeyDatabase</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
