Update TitleKeyDatabase and 3DS compatibility

--- a/Ayra.TitleKeyDatabase/Ayra.TitleKeyDatabase.csproj
+++ b/Ayra.TitleKeyDatabase/Ayra.TitleKeyDatabase.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Ayra.Core\Ayra.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="N3DS\" />
+    <Folder Include="Wii U\" />
+  </ItemGroup>
 </Project>
