3DS + Wii U update + cleanup

--- a/Ayra.Core/Ayra.Core.csproj
+++ b/Ayra.Core/Ayra.Core.csproj
@@ -15,6 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Enums\" />
-    <Folder Include="Structs\" />
+    <Folder Include="Structs\N3DS\" />
   </ItemGroup>
 </Project>
