Slightly bigger update

--- a/Ayra.TitleKeyDatabase/Ayra.TitleKeyDatabase.csproj
+++ b/Ayra.TitleKeyDatabase/Ayra.TitleKeyDatabase.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="N3DS\" />
-    <Folder Include="Wii U\" />
+    <Folder Include="CTR\" />
+    <Folder Include="WUP\" />
   </ItemGroup>
 </Project>
