Possibly faster compile

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/Ayra.CLI/Ayra.CLI.csproj"
+                "${workspaceFolder}/Ayra.CLI/Ayra.CLI.csproj",
+                "--no-restore"
             ]
         }
     ]
